✨ feat(parser): Introduce initial HTML parsing infrastructure
This commit lays the groundwork for adding robust HTML parsing capabilities
to the project. The primary goal is to enable the processing and
extraction of information from web content, which is critical for future
features requiring data ingestion from external sources.

The addition of `html5ever` as a core dependency signifies a significant
step towards robust, standards-compliant HTML parsing. Coupled with
other utility crates, this change provides the necessary tools for
handling complex parsing scenarios and managing structured data.

**Changes made:**
- **Updated** `Cargo.lock` to integrate a comprehensive set of new
  dependencies and their transitive requirements.
- **Added** `html5ever` crate, which is essential for HTML parsing.
- **Included** `rand` crate for random number generation, potentially
  for unique identifiers or data randomization.
- **Integrated** `futf`, `fxhash`, `bitflags`, `byteorder`, `libc`,
  `lock_api`, and `log` crates to support various foundational and
  utility operations required by the new parsing logic and other components.
- **Introduced** new code into `src/backend.rs`, `src/error.rs`,
  `src/item.rs`, and `src/lib.rs` to incorporate the new parsing
  functionality and supporting data structures.

> **Note:** The addition of 627 new lines across multiple source files
> indicates a substantial initial development phase for this new feature,
> with no existing code being removed, highlighting the purely additive
> nature of this change.

**Technical details:**
- The `Cargo.lock` file received a large number of new entries, reflecting
  the addition of multiple new top-level and transitive dependencies.
- Key new dependencies added include:
    - `html5ever`: A high-performance HTML parser.
    - `rand`: A crate for random number generation.
    - `futf`, `fxhash`, `bitflags`, `byteorder`, `libc`, `lock_api`, `log`:
      Various low-level and utility crates supportin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2024"
 
 [dependencies]
 scrapely_macros = { workspace = true }
+thiserror = "2.0.17"
+scraper = "0.24.0"
 
 
 [workspace.dependencies]
