--- a/examples/quotes/Cargo.toml
+++ b/examples/quotes/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 scrapely = { workspace = true }
 scraper = "0.24"
+reqwest = { version = "0.12", features = ["blocking"] }
+anyhow = "1.0"
