✨ feat(regex-extraction): Add regex-based field extraction
This commit introduces a powerful new feature allowing fields to be extracted from HTML or text content using regular expressions. The `scrapely_macros` crate now supports a `#[scrape(regex = "...")]` attribute, enabling more flexible and precise data extraction where CSS selectors might fall short or for non-HTML content.

The `examples/quotes` project has been refactored to demonstrate this new capability, switching its parsing strategy from the `scraper` crate to direct regex application for quote extraction. This also involved an upgrade to use `tokio` for asynchronous operations, showcasing a more modern Rust web scraping setup.

**Changes made:**
- **Added** `#[scrape(regex = "...")` attribute to `scrapely_macros` for defining fields to be extracted via regular expressions.
- **Modified** `scrapely_macros/src/parse.rs` to parse the new `regex` attribute and `ScrapeFieldType` to include a `Regex` variant.
- **Modified** `scrapely_macros/src/codegen.rs` to generate code that compiles and executes the provided regular expression, extracting the first capture group.
- **Updated** `examples/quotes/src/main.rs` to leverage the new `regex` extraction, replacing `scraper` based parsing.
- **Converted** `examples/quotes/src/main.rs` to an `async` application using `tokio` for improved handling of network requests.
- **Introduced** new unit tests in `tests/regex_transform.rs` to ensure the correctness of regex-based field extraction.
- **Bumped** `scrapely` and `scrapely-macros` crate versions to `0.2.0`.

> **Note:** The `quotes` example now fetches the entire page content as text and applies a regex to extract the desired data, which can be particularly useful for dynamic content or specific patterns not easily targetable by traditional selectors.

**Technical details:**
- Files modified: `Cargo.toml`, `examples/quotes/Cargo.toml`, `examples/quotes/src/main.rs`, `scrapely_macros/src/codegen.rs`, `scrapely_macr

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2024"
 scrapely_macros = { workspace = true }
 thiserror = "2.0.17"
 scraper = "0.24.0"
-
+regex = "1.11"
 
 [workspace.dependencies]
 scrapely = { path = "." }
