--- a/examples/quotes/Cargo.toml
+++ b/examples/quotes/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 scrapely = { workspace = true }
+
+anyhow = "1.0.100"
+regex = "1.12.2"
+reqwest = { version = "0.12.24", features = ["json"] }
 scraper = "0.24"
-reqwest = { version = "0.12", features = ["blocking"] }
-anyhow = "1.0"
+tokio = { version = "1.48.0", features = ["full"] }
