✨ feat(crawler): Implement asynchronous crawling capabilities
This commit introduces full asynchronous support for the crawler module,
allowing for more efficient and concurrent web scraping operations. The core
crawling logic has been refactored to leverage Rust's async/await syntax,
powered by the `tokio` runtime and the `async-trait` crate for trait objects.

The main motivation behind this change is to improve performance by enabling
non-blocking I/O operations and to provide a more flexible and extensible
architecture for future enhancements, such as concurrent page processing.

A new `Logger` trait has also been introduced, making the logging mechanism
pluggable and easier to customize for different application needs. This allows
users to integrate their preferred logging solutions.

**Changes made:**
- **Refactor** the `Scraper` trait in `src/crawler.rs` to use `#[async_trait]`,
  making its `scrape_page` method `async`.
- **Update** the `Crawler` struct in `src/crawler.rs` to hold `Box<dyn Scraper`
  `+ Send + Sync>` and `Box<dyn Logger + Send + Sync>`, and make its `run` method `async`.
- **Introduce** a new `pub trait Logger` in `src/crawler.rs` with an `async` `log` method.
- **Expose** the `crawler` module by adding `pub mod crawler;` in `src/lib.rs`.
- **Modify** the `quotes` example (`examples/quotes/src/main.rs`) to utilize the
  new asynchronous `QuotesCrawler` and `SimpleLogger`, converting its `main` function
  to `#[tokio::main]`.
- **Add** `async-trait` and `tokio` dependencies to `examples/quotes/Cargo.toml`.
- **Update** `Cargo.toml` and `Cargo.lock` to include new dependencies such as
  `async-trait`, `tokio`, `futures-util`, and `tokio-stream` for the main crate
  and examples.

> **Note:** This is a breaking change for users of the `Scraper` trait and
> `Crawler` struct, as they now require `async` implementation and proper
> runtime setup.

**Technical details:**
- Files modified: `Cargo.lock`, `Cargo.toml`, `examples/quotes/Cargo.toml`,
  

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,15 @@ edition = "2024"
 
 [dependencies]
 scrapely_macros = { workspace = true }
-thiserror = "2.0.17"
-scraper = "0.24.0"
+
+async-trait = "0.1.89"
+futures-util = "0.3.31"
 regex = "1.11"
+reqwest = { version = "0.12", features = ["json"] }
+scraper = "0.24.0"
+thiserror = "2.0.17"
+tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.17"
 
 [workspace.dependencies]
 scrapely = { path = "." }
