--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ scraper = "0.24.0"
 thiserror = "2.0.17"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1.17"
+tokio-util = "0.7"
+
+[dev-dependencies]
+proptest = "1.0"
 
 [workspace.dependencies]
 scrapely = { path = "." }
